clusters/moo-cluster/flux-system-extras/gitno-hephy-pro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-production
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: gitno.hephy.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  #tls:
  #- hosts:
  #  - gitno.hephy.pro
  #  secretName: gitno-hephy-pro-tls
